--- a/client/app/links/links.html
+++ b/client/app/links/links.html
@@ -1,3 +1,3 @@
-<div id='container' ng-controller='LinksController' ng-init='init()'>
+<div id='container' ng-controller='LinksController'>
   <!-- Your html here -->
 </div>
