--- a/client/app/shorten/shorten.html
+++ b/client/app/shorten/shorten.html
@@ -1,6 +1,7 @@
-<div id='container'>
+<div id='container' ng-controller='ShortenController'>
 <!-- Your code here -->
-
+<input ng-model='link.url'></input>
+<button ng-click="addLink()"></button>
 </div>
 
 
