--- a/client/app/shorten/shorten.html
+++ b/client/app/shorten/shorten.html
@@ -1,5 +1,6 @@
 <div id='container' ng-controller='ShortenController'>
 <!-- Your code here -->
+<a href="/#/links">Links</a>
 <input ng-model='link.url'></input>
 <button ng-click="addLink()"></button>
 </div>
