--- a/client/app/auth/signin.html
+++ b/client/app/auth/signin.html
@@ -1,9 +1,14 @@
-<div id='signin'>
+<div id='signin' ng-controller="AuthController">
   <h1>signin</h1>
   <form name="signinForm" ng-submit='signin()'>
-    <input type='text'ng-model='user.username'>
-    <input type="password" ng-model='user.password'>
-    <button>signin</button>
+    <input type='text' ng-model='user.username' required/>
+    <!-- <span ng-show="signinForm.username.$pending.username">Checking if name is available</span>
+    <span ng-show="signinForm.username.$error.username">Username is available</span> -->
+    <input type="password" ng-model='user.password' required ng-maxlength="3">
+    <button ng-disabled="signinForm.$invalid" >signin</button>
+    <span ng-show="signinForm.userForm.$error.required">Username is required.</span>
+    <span ng-show="signinForm.passForm.$error.maxlength">Password must be at most 3 characters.</span>
+    <span ng-show="loginFail">Invalid username/password.</span>
   </form>
   <a href="#/signup">Don't have an account? <strong>Signup</strong> ...</a>
 </div>
