Now using ui-router and applied some basic styles with bootstrap.

--- a/client/app/auth/signin.html
+++ b/client/app/auth/signin.html
@@ -10,5 +10,5 @@
     <span ng-show="signinForm.passForm.$error.maxlength">Password must be at most 3 characters.</span>
     <span ng-show="loginFail">Invalid username/password.</span>
   </form>
-  <a href="#/signup">Don't have an account? <strong>Signup</strong> ...</a>
+  <a ui-sref="signup">Don't have an account? <strong>Signup</strong> ...</a>
 </div>
