--- a/client/app/auth/signup.html
+++ b/client/app/auth/signup.html
@@ -7,5 +7,5 @@
     <span ng-show="signupForm.userForm.$error.required">Username is required.</span>
     <span ng-show="signupForm.passForm.$error.maxlength">Password must be at most 3 characters.</span>
   </form>
-  <a href="#/signin">Already have an account? <strong>Signin</strong> ...</a>
+  <a ui-sref="signin">Already have an account? <strong>Signin</strong> ...</a>
 </div>
