--- a/client/app/shorten/shorten.html
+++ b/client/app/shorten/shorten.html
@@ -1,8 +1,8 @@
 <div id='container' ng-controller='ShortenController'>
 <!-- Your code here -->
-<a href="/#/links">Links</a>
-<input ng-model='link.url'></input>
-<button ng-click="addLink()"></button>
+<a ui-sref="links">Links</a>
+<div class="" style="width:300px">
+<input ng-model='link.url' class="form-control"></input><button ng-click="addLink()" class="btn">Get shortly URL</button>
 </div>
 
 
